template.yaml.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ecommerce-be
  name: ecommerce-be-deployment
  namespace: book-reviews
spec:
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: ecommerce-be
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ecommerce-be
      namespace: book-reviews
    spec:
      containers:
        - image: hoangvu42/ecommerce-be:v1
          imagePullPolicy: Always
          name: ecommerce-be
          ports:
            - containerPort: 8080
              name: tcp
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-be-service
  namespace: book-reviews
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: ecommerce-be
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-be-ingress
  namespace: book-reviews
spec:
  ingressClassName: nginx
  rules:
    - host: api-ecommerce.hoangvu42.site
      http:
        paths:
          - backend:
              service:
                name: ecommerce-be-service
                port:
                  number: 8080
            path: /
            pathType: Prefix
